app_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: app-ip
spec:
  defaultBackend:
    service:
      name: search-web-service
      port:
        number: 80
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /api/*
            backend:
              service:
                name: search-backend-service
                port:
                  number: 8080
